# falling

./: .gitignore  LICENSE  README.md  falling.cabal
Physics/Falling/Collision/: .gitignore  Collision.hs  CollisionDetectionAlgorithm.hs  CollisionDetectionDispatcher.hs  CollisionPair.hs
Physics/Falling/Collision/Detection/: BallBallCollisionDetector.hs  BroadPhase.hs  BruteForceBroadPhase.hs  CollisionDetectionAlgorithm.hs  CollisionDetectionDispatcher.hs  GJK.hs  ImplicitShapeImplicitShapeCollisionDetector.hs  IncrementalContactManifold.hs  MinkowskiSampling.hs  NarrowPhase.hs  PlaneImplicitShapeCollisionDetector.hs  Simplex.hs
Physics/Falling/Collision/Graph/: CollisionGraph.hs  CollisionGraphTree.hs
Physics/Falling/Constraint/: Solvable.hs  Solver.hs
Physics/Falling/Constraint/Solver/: AccumulatedImpulse.hs  AccumulatedImpulseSystem.hs  ContactDynamicConfiguration.hs  FirstOrderWorldAccumulatedImpulse.hs  SecondOrderWorldAccumulatedImpulse.hs
Physics/Falling/Dynamics/: .gitignore  InertiaTensor.hs
Physics/Falling/Identification/: Identifiable.hs  IndexGenerator.hs  SignedIndexGenerator.hs
Physics/Falling/Integrator/: GenericEulerIntegrator.hs  Integrable.hs
Physics/Falling/Math/: AnnotatedVector.hs  Error.hs  OrthonormalBasis.hs  Transform.hs  UnitSphere.hs
Physics/Falling/RigidBody/: .gitignore  CollisionVolume.hs  Dynamic.hs  DynamicBody.hs  DynamicsProperties.hs  Filters.hs  OrderedRigidBody.hs  Positionable.hs  RigidBody.hs  RigidBodySolver.hs  StaticBody.hs
Physics/Falling/Shape/: .gitignore  AABB.hs  AABBFactory.hs  Ball.hs  BoundingVolume.hs  Box.hs  CSO.hs  HasBoundingVolume.hs  ImplicitShape.hs  MinkovskiSum.hs  MinkowskiSum.hs  Plane.hs  PolygonRepresentation.hs  ShapeReflection.hs  ShapeWithMargin.hs  TransformableShape.hs  TransformedShape.hs  VolumetricShape.hs
Physics/Falling/World/: GenericWorld.hs  WorldWithRigidBody.hs
