Name:            falling
Version:         0.0.0.0
Description:     generic physics engine
License:         BSD3
License-file:    LICENSE
Author:          Sébastien Crozet
Maintainer:      developer@crozet.re
Build-Type:      Simple
Cabal-Version:   >=1.2

Library
  exposed-modules: Physics.Falling.Collision.Collision
                   Physics.Falling.Collision.Detection.BroadPhase
                   Physics.Falling.Collision.Detection.BruteForceBroadPhase
                   Physics.Falling.Collision.Detection.NarrowPhase
                   Physics.Falling.Collision.Detection.BallBallCollisionDetector
                   Physics.Falling.Collision.Detection.PlaneImplicitShapeCollisionDetector
                   Physics.Falling.Collision.Detection.ImplicitShapeImplicitShapeCollisionDetector
                   Physics.Falling.Collision.Detection.Simplex
                   Physics.Falling.Collision.Detection.GJK
                   Physics.Falling.Collision.Detection.MinkowskiSampling
                   Physics.Falling.Collision.Graph.CollisionGraph
                   Physics.Falling.Collision.Graph.CollisionGraphTree
                   Physics.Falling.Constraint.Solver.AccumulatedImpulseSystem
                   Physics.Falling.Constraint.Solver.AccumulatedImpulse
                   Physics.Falling.Constraint.Solver.ContactDynamicConfiguration
                   Physics.Falling.Dynamics.InertiaTensor
                   Physics.Falling.Identification.Identifiable
                   Physics.Falling.Identification.IndexGenerator
                   Physics.Falling.Identification.SignedIndexGenerator
                   Physics.Falling.Integrator.GenericEulerIntegrator
                   Physics.Falling.Integrator.Integrable
                   Physics.Falling.Math.Transform
                   Physics.Falling.Math.AnnotatedVector
                   Physics.Falling.Math.Error
                   Physics.Falling.Math.UnitSphere
                   Physics.Falling.RigidBody.CollisionVolume
                   Physics.Falling.RigidBody.Dynamic
                   Physics.Falling.RigidBody.DynamicBody
                   Physics.Falling.RigidBody.Filters
                   Physics.Falling.RigidBody.OrderedRigidBody
                   Physics.Falling.RigidBody.Positionable
                   Physics.Falling.RigidBody.RigidBody
                   Physics.Falling.RigidBody.RigidBodySolver
                   Physics.Falling.RigidBody.StaticBody
                   Physics.Falling.Shape.Ball
                   Physics.Falling.Shape.ImplicitShape
                   Physics.Falling.Shape.ShapeWithMargin
                   Physics.Falling.Shape.ShapeReflection
                   Physics.Falling.Shape.TransformedShape
                   Physics.Falling.Shape.MinkowskiSum
                   Physics.Falling.Shape.Plane
                   Physics.Falling.Shape.VolumetricShape
                   Physics.Falling.Shape.CSO
                   Physics.Falling.World.GenericWorld
                   Physics.Falling.World.WorldWithRigidBody
  Build-Depends:  base, vect >= 0.4.0, containers >= 0.5.0.0, fgl >= 5.4.0.0, vector >= 0.10.0.0
  ghc-options:    -Wall -O2 
  -- -prof -auto-all -caf-all
